<resources>
    <string name="app_name">TopApp</string>

    <string name="help_us">Help us connect you to perfect professional:</string>
    <string name="match_the_best">Match with best Professionals in 2 secs</string>
    <string name="otp_description">We have sent you an OTP code to your Phone Number,\n Please insert it below.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
     <string name="user">User</string>
    <string name="mentor">Mentor</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="error_retry">Retry</string>
    <string name="empty_phone_number">Enter Your Phone Number</string>
    <string name="empty_year">Enter years of experience</string>
    <string name="empty_area">Enter area of expertise</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_expertise">Enter Expertise</string>
    <string name="enter_city">Enter City</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="number_hint">987654</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="user_role">User Role</string>
    <string name="add_more">Add More</string>
    <string name="area_of_expertise">Area of Expertise</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="select_category">Please Select Category</string>
    <string name="category">Category</string>
    <string name="experience_details">Experience Details</string>
    <string name="add_experience">Add Experience</string>
    <string name="profile">Profile</string>
    <string name="location">location</string>
    <string name="notification">notification</string>
    <string name="partner_view">Partner View</string>
    <string name="help">Help</string>
    <string name="logout">logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="choose_slot">Choose Slot</string>
    <string name="details">Details</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="book_slot">Book Slot</string>
    <string name="working_time">Working Time</string>
    <string name="mon_fri">Mon-Fri</string>

</resources>