<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.topApp.views.userinfo.UserInfoVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad_toolbar"
            android:elevation="6dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/customTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/et_first_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/enter_first_name"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@={viewModel.firstName}"
                    android:textColorHint="?attr/colorControlHighlight"
                    app:layout_constraintBottom_toTopOf="@id/tv_last_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/et_last_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_first_name" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/enter_last_name"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@={viewModel.lastName}"
                    android:textColorHint="?attr/colorControlHighlight"
                    app:layout_constraintBottom_toTopOf="@id/tv_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_last_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/et_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_last_name" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@={viewModel.email}"
                    android:textColorHint="?attr/colorControlHighlight"
                    app:layout_constraintBottom_toTopOf="@id/tv_city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/city"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/et_city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/enter_city"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@={viewModel.email}"
                    android:textColorHint="?attr/colorControlHighlight"
                    app:layout_constraintBottom_toTopOf="@id/tv_user_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_city" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_user_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/user_role"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/radioGroup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_city" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/tv_experience_Details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_type">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="40dp"
                        android:checked="false"
                        android:fontFamily="@font/open_sans_regular"
                        android:paddingStart="6dp"
                        android:scaleX="0.9"
                        android:scaleY="0.9"
                        android:text="@string/user"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="40dp"
                        android:checked="false"
                        android:fontFamily="@font/open_sans_regular"
                        android:paddingStart="6dp"
                        android:scaleX="0.9"
                        android:scaleY="0.9"
                        android:text="@string/mentor"
                        android:textSize="14sp" />
                </RadioGroup>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_experience_Details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="Experience Details"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/exp_recyclerView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup"
                    />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/exp_recyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toTopOf="@id/tv_add_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_experience_Details"
                    app:layout_constraintVertical_bias="0.0"
                    tools:itemCount="1"
                    tools:listitem="@layout/inflate_experience_item" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_add_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_add"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:text="@string/add_more"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/submit_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exp_recyclerView" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="46dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_more" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            visibleOrGone="@{viewModel.isProgressShow}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/grey"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>